<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The aggregator sits one level up. equivalence-tests is a direct child of card-platform. -->
  <parent>
    <groupId>com.carddemo</groupId>
    <artifactId>card-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>equivalence-tests</artifactId>
  <packaging>jar</packaging>

  <name>CardDemo Equivalence Tests</name>
  <description>
    Provides fixed-width fixture loading and copybook parsing support for the equivalence
    suite. Six *EquivalenceTest classes cover posting, authorization, bill payment,
    interest, validation and decimal behavior. Failsafe runs them at integration-test
    and fails the build at verify.
  </description>

  <!-- The framework parent defaults the compiler release to 17. These two properties pin release 25. -->
  <properties>
    <java.version>25</java.version>
    <maven.compiler.release>25</maven.compiler.release>
  </properties>

  <dependencies>

    <!-- Shared libraries. The aggregator's dependency management supplies both versions. -->
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>event-contracts</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>cobol-compat</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- The six services. The aggregator does not manage them, so each names ${project.version}. -->
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>authorization-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>ledger-posting-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>fraud-detection-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>notification-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>account-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.carddemo</groupId>
      <artifactId>card-service</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Test infrastructure. Versions come from the Spring Boot bill of materials the aggregator imports. -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.kafka</groupId>
      <artifactId>spring-kafka-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Testcontainers 2.x publishes each module under a testcontainers-prefixed artifact identifier. -->
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-postgresql</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-kafka</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Test framework and the wait helper for event-driven assertions. -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <!-- This module declares the other eight platform modules at test scope, which the service-artifact
           ban rejects. Matching the identifier enforce-service-independence unbinds that one
           execution here. The inherited enforce-toolchain-and-prohibited execution stays bound, so
           this module still fails on a prohibited direct dependency and on a wrong Maven or Java
           version. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-service-independence</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Surefire leaves the *EquivalenceTest name pattern to Failsafe. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>**/*EquivalenceTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- This module intentionally carries test sources only. Its primary artifact therefore
           packages the compiled equivalence harness rather than an empty main output directory.
           Keeping a real artifact lets both verify and install complete without a warning or a
           meaningless production marker class. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <classesDirectory>${project.build.testOutputDirectory}</classesDirectory>
        </configuration>
      </plugin>

      <!-- Failsafe runs the *EquivalenceTest classes at integration-test and fails the build at
           verify.

           The execution identifier below is the one the parent declares in pluginManagement, so
           Maven merges the two into one execution. The include sits inside that execution and not
           at plugin level, so a second execution added later does not select the same classes
           again. EquivalenceSuiteExecutionConfigurationTest holds both properties. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <id>integration-test</id>
            <configuration>
              <includes>
                <include>**/*EquivalenceTest.java</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
